# lichenscript

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  dune-project  lichen.opam  lichenscript.opam  prepublish.sh  test.sh  waterlang.opam
.circleci/: config.yml
.github/workflows/: main.yml  npm_publish.yml  npm_publish_aarch64.yml
examples/array/: expect.txt  main.lc
examples/array_filter/: main.lc
examples/array_map/: expect.txt  main.lc
examples/array_pattern/: expect.txt  main.lc
examples/array_sort/: main.lc
examples/assign/: expect.txt  main.lc
examples/assign_static_field/: main.lc
examples/binary_search/: expect.txt  main.lc
examples/binary_search_recursive/: main.lc
examples/bit_not/: expect.txt  main.lc
examples/bit_not_i32/: main.lc
examples/buffer/: expect.txt  main.lc
examples/char_code/: expect.txt  main.lc
examples/class/: expect.txt  main.lc
examples/class_base/: expect.txt  main.lc
examples/class_meta/: expect.txt  main.lc
examples/class_namespace_static_field/: expect.txt  main.lc
examples/class_static_fields/: expect.txt  main.lc
examples/constant_folding/: main.lc
examples/counter/: main.lc
file_packer/: dune  file_packer.ml
js_output_wrapper/: dune  js_output_wrapper.ml
lib/: dune
lib/binaryen/: bindings.c  c_bindings.ml  dsl.ml  dune  runtime.js
lib/binaryen/bindings/: bindings.ml  dune
lib/binaryen/stub_gen/: dune  stub_gen.ml
lib/c_backend/: dune  (+9 more)
lib/wasm/: allocator_facility.ml  array_facility.ml  binaryen.ml  binaryen.mli  binaryen_types.ml  bindings.c  c_bindings.ml  codegen.ml  codegen.mli  codegen_env.ml  config.ml  data_segment_allocator.ml  dsl.ml  dune  js_glue.ml  js_glue.mli  string_facility.ml  string_utils.ml
npm_version_bumper/: dune  npm_version_bumper.ml
runtime/: Makefile  runtime.c  runtime.h
std/: LICENSE  lib.wt
test/: dune  lichenscript_test.ml  utils.ml  waterlang.ml
web/: dune  intellisense.ml  js_helper.ml  lichenscript_web.ml  utils.ml
(+266 files in other folders)
