opam-version: "2.0"
maintainer: "Vincent Chan <okcdz@diverse.space>"
authors: "Vincent Chan <okcdz@diverse.space>"
synopsis: "Compiler of LichenScript"
homepage: "https://lichenscript.com/"
bug-reports: "https://github.com/vincentdchan/LichenScript/issues"
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "1.11.0"}
  "js_of_ocaml" {>= "4.0.0"}
  "js_of_ocaml-ppx" {>= "4.0.0"}
  "ppx_deriving"
  "ppx_gen_rec"
  "core" { = "v0.14.1" & < "v0.15.0" }
  "core_kernel" { = "v0.14.1" & < "v0.15.0" }
  "sedlex"
  "re"
  "wtf8"
  "ppx_inline_test"
]