(executable
 (name lichenscript_web)
 (modes js)
 (libraries
  js_of_ocaml
  core_kernel
  lichenscript_lex
  lichenscript_parsing
  lichenscript_typing
  lichenscript_c
  lichenscript_resolver
  lichenscript_common
 )
 (preprocess
  (pps js_of_ocaml-ppx))
 ; (js_of_ocaml
 ;  (javascript_files
 ;   caml_thread_initialize.js
 ;   caml_mutex_new.js
 ;   spawn_is_osx.js))
)

(rule
 (targets runtime.ml)
 (action (run ../file_packer/file_packer.exe ../runtime/ --base .. -o runtime.ml)))

(rule
 (targets preclude.ml)
 (action (run ../file_packer/file_packer.exe ../std/ --base .. -o preclude.ml)))
