(library
 (name binaryen)
 (libraries bindings core_kernel ctypes)
 (foreign_stubs
  (language c)
  (names b)
  (flags -Wno-incompatible-pointer-types))
 (c_library_flags (-lbinaryen))
 (flags :standard -cclib -lbinaryen))

(rule
 (targets b.ml)
 (action (run ./stub_gen/stub_gen.exe)))

(rule
 (targets b.c)
 (action (run ./stub_gen/stub_gen.exe -c)))
