(library
 (name waterlang_wasm)
 (libraries
  waterlang_typing
  waterlang_lex
  waterlang_parsing
  core_kernel
  ctypes
  ctypes.foreign
 )
 (foreign_stubs
  (language c)
  (names bindings))
 (c_library_flags (-lbinaryen))
 (flags :standard -cclib -lbinaryen)
 (preprocess (pps ppx_deriving.show)))